# django-saml2-pro-auth

./: .README.md.swp  .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  VERSION.py  install-prereqs.sh  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: build-and-test.yml  pypi-publish.yml
django_saml2_pro_auth/: auth.py  urls.py  utils.py  views.py
django_saml2_pro_auth/auth/: saml2.py
example/: README.md  gunicorn.conf.py  requirements.txt
example/certs/: cert.pem  key.pem
example/example/: settings.py  urls.py  views.py
example/example/templates/: base.html  index.html
src/django_saml2_pro_auth/: __init__.py  auth.py  release.py  urls.py  utils.py  views.py
src/saml2_pro_auth/: __init__.py  admin.py  apps.py  auth.py  constants.py  function_urls.py  json_field.py  models.py  settings.py  urls.py  utils.py  views.py
src/saml2_pro_auth/migrations/: 0001_initial.py
tests/: __init__.py  settings.py  testAuth.py  testUtils.py  test_auth.py  test_models.py  test_settings.py  test_urls.py  test_utils.py  urls.py
tests/data/: configs.py
tests/mock_certs/: myprovider.crt  sp.crt  sp.key
