[metadata]
name = django-saml2-pro-auth
version = 1.0.1
description = SAML2 authentication backend for Django wrapping OneLogins python-saml package https://github.com/onelogin/python3-saml
long_description = file: README.md
long_description_content_type=text/markdown
author = Julie Davila
author_email = julied@zibasec.io
url = https://github.com/zibasec/django-saml2-pro-auth
keywords =
    sso
    single-signon
    authentication
    saml
    saml2
    django
    development
    okta
    onelogin
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: Django
    Framework :: Django :: 2.2.20
    Framework :: Django :: 3.0.14
    Framework :: Django :: 3.1.8
    Topic :: Security
    Topic :: System :: Systems Administration :: Authentication/Directory
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
    include_package_data = True
packages=find:
install_requires =
    Django>=2.2.20
    python3-saml>=1.9.0
python_requires = >=3.6

[options.extras_require]
dev = check-manifest

[options.packages.find]
where=src

[bdist_wheel]
universal=0
